--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Listar.cshtml
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Listar.cshtml
@@ -5,34 +5,39 @@
     ViewData["Title"] = "Empleados";
 }
 
-<h1>Listar Empleados</h1>
+<h1>Lista de Empleados</h1>
 
 <div>
-    <table class="table table-hover">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Salario)
-            </th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nombre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Salario)
-                </td>
-            </tr>
-        }
-    </table>
+    <div style="width:auto;height:800px;overflow:auto">
+        <pre>
+            <table class="table table-hover">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Nombre)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Salario)
+                    </th>
+                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Salario)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </pre>
+    </div>
+    <input type="submit" id="btnAgregar" class="btn btn-primary" value="Agregar"/>
 </div>
