--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Listar.cshtml
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Listar.cshtml
@@ -9,35 +9,37 @@
 
 <div>
     <div style="width:auto;height:800px;overflow:auto">
-        <pre>
-            <table class="table table-hover">
+        <table class="table table-hover">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Salario)
+                </th>
+            </tr>
+            @foreach (var item in Model)
+            {
                 <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Id)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Nombre)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Salario)
-                    </th>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Salario)
+                    </td>
                 </tr>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Id)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Nombre)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Salario)
-                        </td>
-                    </tr>
-                }
-            </table>
-        </pre>
+            }
+        </table>
     </div>
-    <input type="submit" id="btnAgregar" class="btn btn-primary" value="Agregar"/>
+    @* Ve después si se arregla y se cambia por un botón en vez de dejar un link *@
+    @* <input type="submit" id="btnAgregar" class="btn btn-primary" value="Agregar" asp-controller="Empleado" asp-action="Agregar"/>
+    <button class="btn btn-primary" asp-area="" asp-controller="Empleado" asp-action="Agregar">Agregar</button> *@
+    @Html.ActionLink("Agregar", "Agregar", "Empleado")
 </div>
+
