--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Shared/_Layout.cshtml
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Tarea1_BD1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2S 2024 - Tarea 1 de Bases de Datos 1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
