--- a/Solucion_Tarea1_BD1/Tarea1_BD1/wwwroot/css/site.css
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/wwwroot/css/site.css
@@ -31,3 +31,61 @@ th {
     position: sticky;
     top: 0;
 }
+
+#btnBack {
+    margin-left: 1200px;
+}
+
+/*
+    Desde aqui el CSS para el popup de avisos
+*/
+
+#overlay {
+    display: none;
+    position: fixed; /* Posicion fija sin que afecte el movimiento del contenido de la pagina */
+    top: 0; /* Distancia entre la pate superior y el div */
+    left: 0; /* Distancia entre la pate iaquierda y el div */
+    /*
+        Que la altura y la anchura sea el mismo que el contenedor en donde esta el div id=overlay
+    */
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Color de fondo semitransparente */
+    z-index: 3; /* La superposición con relacion a otros elementos */
+}
+
+.contenedorPopup {
+    display: none; /* Para ocultar el popup desde que empiece a ejecutarse la web, cuando esta en none */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 250px;
+    width: 350px;
+    transform: translate(-50%, -50%); /* Centra el contenido conforme al contenedor */
+    background-color: white;
+    z-index: 4;
+    cursor: pointer;
+}
+
+#tituloPopup {
+    position: absolute;
+    top: 15px;
+    left: 75px;
+}
+
+#btnCerrarPopup {
+    border-radius: 4px;
+    border-width: 1px;
+    transition-duration: 0.4s;
+    position: absolute;
+    top: 115px;
+    right: 40px;
+}
+
+#btnCerrarPopup:hover {
+    background-color: #ca0505
+}
+
+/*
+    Hasta aqui el CSS para el popup de avisos
+*/
