--- a/Solucion_Tarea1_BD1/Tarea1_BD1/wwwroot/css/site.css
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/wwwroot/css/site.css
@@ -33,7 +33,8 @@ th {
 }
 
 #btnBack {
-    margin-left: 1200px;
+    position: absolute;
+    right: 0;
 }
 
 /*
@@ -64,22 +65,30 @@ th {
     transform: translate(-50%, -50%); /* Centra el contenido conforme al contenedor */
     background-color: white;
     z-index: 4;
-    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    border: 1px solid #ccc;
 }
 
 #tituloPopup {
     position: absolute;
-    top: 15px;
-    left: 75px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+}
+
+#labelParaAviso {
+    text-align: center;
 }
 
 #btnCerrarPopup {
-    border-radius: 4px;
-    border-width: 1px;
-    transition-duration: 0.4s;
     position: absolute;
-    top: 115px;
-    right: 40px;
+    top: 0;
+    right: 0;
+    border-radius: 15px;
+    border: 1px solid #ccc;
 }
 
 #btnCerrarPopup:hover {
