--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Agregar.cshtml
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Agregar.cshtml
@@ -1,6 +1,5 @@
-﻿
-@* @model IEnumerable<Tarea1_BD1.Models.Empleado> *@
-@model Empleado
+﻿@* @model IEnumerable<Tarea1_BD1.Models.Empleado> *@
+@model Empleado//recien puesto
 
 @{
     ViewData["Title"] = "Empleados";
@@ -17,33 +16,7 @@
             Agregar Empleados
         </h1>
         <div class="form-floating">
-            @* <form id="formAgregarEmpleado">
-                <div class="mt-5">
-                    <label for="entradaNombre">
-                        Nombre:
-                    </label>
-                    <input type="text" asp-for="Nombre" id="entNom" name="entradaNombre" class="form-control" placeholder="Escriba el nombre aquí">
-                    <span asp-validation-for="Nombre" class="text-danger"></span>
-                </div>
-
-                <div class="mt-3">
-                    <label for="entradaSalario">
-                        Salario:
-                    </label>
-                    <input type="text" id="entSal" name="entradaSalario" class="form-control" placeholder="Escriba el salario aquí">
-                </div>
-
-                <div class="mt-3" id="div-botones">
-                    <input type="submit" id="btnSubmit" class="btn btn-primary" value="Insertar" onclick="validarFormulario()"> linea estaba comentada
-                    Se puede quitar la propiedad onclick="btnSubmit_Click" y quita el refresco despues de la pagina del todo    linea estaba comentada
-                    <asp:button type="submit" id="btnSubmit" class="btn btn-primary" OnClick="validarFormulario()">Insertar</asp:button>
-                    <input type="submit" id="btnBack" class="btn btn-primary" value="Regresar" asp-controller="Empleado" asp-action="Listar"> linea estaba comentada
-                    <asp:button type="submit" id="btnBack" class="btn btn-primary" asp-controller="Empleado" asp-action="Listar">Regresar</asp:button>
-                </div>
-            </form> *@
-            @* Probando con un form de .net *@
-            @using (Html.BeginForm("IngresarEmpleadoEnBD", "Empleado", FormMethod.Post))
-            {
+            <form id="formAgregarEmpleado" onsubmit="return validarFormulario();">
                 <div class="mt-5">
                     <label for="entradaNombre">
                         Nombre:
@@ -59,17 +32,16 @@
                 </div>
 
                 <div class="mt-3" id="div-botones">
-                    @* <input type="submit" id="btnSubmit" class="btn btn-primary" value="Insertar" onclick="validarFormulario()"> *@
-                    @* Se puede quitar la propiedad onclick="btnSubmit_Click" y quita el refresco despues de la pagina del todo*@
-                    <asp:button type="submit" id="btnSubmit" class="btn btn-primary" OnClick="validarFormulario()" @* OnClientClick="this.form.submit();" *@>Insertar</asp:button>
+                    <input type="submit" id="btnSubmit" class="btn btn-primary" value="Insertar">
+                    @* Se puede quitar la propiedad onclick="btnSubmit_Click" y quita el refresco despues de la pagina del todo    linea estaba comentada *@
+                    @* <asp:button type="submit" id="btnSubmit" class="btn btn-primary">Insertar</asp:button> *@
                     <input type="submit" id="btnBack" class="btn btn-primary" value="Regresar" asp-controller="Empleado" asp-action="Listar">
                     @* <asp:button type="submit" id="btnBack" class="btn btn-primary" asp-controller="Empleado" asp-action="Listar">Regresar</asp:button> *@
                 </div>
-            }
-            |
+            </form>
         </div>
     </div>
-    
+
     <div id="overlay" class="class-overlay"></div>
 
     <div id="elPopup" class="contenedorPopup">
