--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Agregar.cshtml
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Agregar.cshtml
@@ -1,9 +1,15 @@
 ﻿@* @model IEnumerable<Tarea1_BD1.Models.Empleado> *@
-@model Empleado//recien puesto
+@model Empleado
 
 @{
     ViewData["Title"] = "Empleados";
 }
+
+@* @section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+} *@
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,12 +22,16 @@
             Agregar Empleados
         </h1>
         <div class="form-floating">
-            <form id="formAgregarEmpleado" onsubmit="return validarFormulario();">
+            @* <form id="formAgregarEmpleado" onsubmit="return validarFormulario();" asp-action="IngresarEmpleadoEnBD" asp-controller="Empleado" method="post"> *@
+            @* <form id="formAgregarEmpleado" asp-action="IngresarEmpleadoEnBD" asp-controller="Empleado" method="post"> *@
+            <form id="formAgregarEmpleado" asp-action="ValidarDataAnnotations" asp-controller="Empleado" method="post">
                 <div class="mt-5">
                     <label for="entradaNombre">
                         Nombre:
                     </label>
                     <input type="text" id="entNom" name="entradaNombre" class="form-control" placeholder="Escriba el nombre aquí">
+                    @* <span asp-validation-for="Nombre" class="text-danger"></span> *@
+                    @Html.ValidationMessageFor(d => d.Nombre, "", new {@class="text-danger"})<br />
                 </div>
 
                 <div class="mt-3">
@@ -29,6 +39,8 @@
                         Salario:
                     </label>
                     <input type="text" id="entSal" name="entradaSalario" class="form-control" placeholder="Escriba el salario aquí">
+                    @* <span asp-validation-for="Salario" class="text-danger"></span> *@
+                    @Html.ValidationMessageFor(d => d.Salario, "", new { @class = "text-danger" })<br />
                 </div>
 
                 <div class="mt-3" id="div-botones">
