--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Listar.cshtml
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Listar.cshtml
@@ -4,6 +4,15 @@
 @{
     ViewData["Title"] = "Empleados";
 }
+
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["Message"]
+    </div>
+}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
