--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Agregar.cshtml
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Views/Empleado/Agregar.cshtml
@@ -47,15 +47,12 @@
                     <input type="text" asp-for="Salario" id="entSal" class="form-control" placeholder="Escriba el salario aquí">
                     <span asp-validation-for="Salario" id="spanSalario" class="text-danger"></span>
                 </div>
-
+                
             </form>
             @* Sección para los botones *@
             <div class="mt-3" id="div-botones">
-                @* <input type="submit" id="btnSubmit" class="btn btn-primary" value="Insertar"> *@
                 <button type="submit" id="btnSubmit" class="btn btn-primary" form="formAgregarEmpleado">Insertar</button>
-                <button type="submit" id="btnBack" class="btn btn-primary" asp-controller="Empleado" asp-action="Listar">Regresar</button>
-                @* <asp:button type="button" id="btnBack" class="btn btn-primary" asp-controller="Empleado" asp-action="Listar">Regresar</asp:button> *@
-                @* <input type="submit" id="btnBack" class="btn btn-primary" value="Regresar" asp-controller="Empleado" asp-action="Listar"> *@
+                <button id="btnBack" class="btn btn-primary" onclick="location.href='@Url.Action("Listar", "Empleado")'">Regresar</button>
             </div>
         </div>
     </div>
